--- a/projects.html
+++ b/projects.html
@@ -64,6 +64,7 @@
 
 
     <section class="-ow">
+
     <ul reversed class="non-blluet-lists">
         <div class="container-centre 
         pad">
@@ -76,9 +77,9 @@
         </li>
 
         <a class="link link-primary 
-        pro-link" href="https://github.com/ruman7ak/Personal-Quiz">View Source</a>
+        pro-link" href="https://github.com/ruman7ak/GK-Quiz">View Source</a>
 
-        <a class="link-secondary" href="https://replit.com/@ruman7ak/endgame#index.js">Live Project</a>
+        <a class="link-secondary" href="https://replit.com/@ruman7ak/quiz-1#index.js">Live Project</a>
          </div>
     </ul>
     </section>
