refactor: updated links

--- a/projects.html
+++ b/projects.html
@@ -53,14 +53,15 @@
         </li>
 
          <a class="link link-primary 
-        pro-link" href="https://github.com/ruman7ak/Personal-Quiz">View Source</a>
+        pro-link" href="https://github.com/ruman7ak/GK-Quiz">View Source</a>
 
-        <a class="link-secondary" href="https://replit.com/@ruman7ak/endgame#index.js">Live Project</a>
+        <a class="link-secondary" href= https://replit.com/@ruman7ak/quiz-1#index.js>Live Project</a>
 
         </div>
     </ul>
     </section>
-        
+   
+    
 
 
     <section class="-ow">
@@ -77,9 +78,9 @@
         </li>
 
         <a class="link link-primary 
-        pro-link" href="https://github.com/ruman7ak/GK-Quiz">View Source</a>
+        pro-link" href="https://github.com/ruman7ak/Personal-Quiz">View Source</a>
 
-        <a class="link-secondary" href="https://replit.com/@ruman7ak/quiz-1#index.js">Live Project</a>
+        <a class="link-secondary" href="https://replit.com/@ruman7ak/endgame#index.js">Live Project</a>
          </div>
     </ul>
     </section>
