update: modified project pages

--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
          <a class="link link-primary 
         pro-link" href="https://github.com/ruman7ak/PalindromeBirthday">View Source</a>
 
-        <a class="link-secondary" href= "palindromic.netlify.app/">Live Project</a>
+        <a class="link-secondary" href= "https://palindromic.netlify.app/">Live Project</a>
 
         </div>
     </ul>
@@ -178,9 +178,9 @@
             </li>
     
             <a class="link link-primary 
-            pro-link" href="https://github.com/ruman7ak/Emoji-Identifier">View Source</a>
+            pro-link" href="https://github.com/ruman7ak/emojiIdentifier">View Source</a>
     
-            <a class="link-secondary" href="https://wf6sxp.csb.app/">Live Project</a>
+            <a class="link-secondary" href="https://1cq89o.csb.app/">Live Project</a>
              </div>
         </ul>
         </section>
