--- a/projects.html
+++ b/projects.html
@@ -158,7 +158,7 @@
          <a class="link link-primary 
         pro-link" href="https://github.com/ruman7ak/Recommendation-App">View Source</a>
 
-        <a class="link-secondary" href= "https://oss8q3.csb.app/">Live Project</a>
+        <a class="link-secondary" href= "https://t2ee7e.csb.app/">Live Project</a>
 
         </div>
     </ul>
