--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 
     <header class="hero">
 
-        <img class="pro-img" src="https://cdn-images-1.medium.com/max/1200/1*ivjksIhvAs7TUXbQCxAU0A.jpeg">
+        <img class="pro-img" src="https://media4.giphy.com/media/eNAsjO55tPbgaor7ma/giphy.gif?cid=6c09b9524b34e5cae1bac742b98bddae421dc709dab0e28b&rid=giphy.gif&ct=s">
     
         <h1 class="hero-heading">My Code </h1>
 
