style: updated picture hero

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 
 
     <header class="hero">
+        <div class="images">
+        <img class="hero-img" src="https://i.ibb.co/Xjwn6KT/final.png">
+        </div>
 
-        <img class="hero-img" src="https://pbs.twimg.com/profile_images/1590689994066231296/3mrfWj1d_400x400.jpg">
-    
         <h1 class="hero-heading">Hi, I am Ruman Ak </h1>
 
         <p class="head-title"><strong> I'm learning how to program and make web applications with NeogCamp</strong></p>
