style: updated hero Image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <header class="hero">
         <div class="images">
-        <img class="hero-img" src="https://i.ibb.co/Xjwn6KT/final.png">
+        <img class="hero-img" src="https://i.ibb.co/jvKJYJh/fifinal.png">
         </div>
 
         <h1 class="hero-heading">Hi, I am Ruman Ak </h1>
