style: changed image for project page

--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
     </section>
 
 
-    <section class="-ow">
+    <!-- <section class="-ow">
 
         <ul reversed class="non-blluet-lists">
             <div class="container-centre 
@@ -102,10 +102,11 @@
             <a class="link-secondary" href="https://funwtriangle.netlify.app/">Live Project</a>
              </div>
         </ul>
-        </section>
+        </section> -->
 
-
-    <ul reversed class="non-blluet-lists">
+        
+        <section class="-ow">
+        <ul reversed class="non-blluet-lists">
         <div class="container-centre 
         pad">
         
@@ -125,7 +126,7 @@
 
 
 
-    <section class="-ow">
+    <!-- <section class="-ow">
 
         <ul reversed class="non-blluet-lists">
             <div class="container-centre 
@@ -144,7 +145,7 @@
             <a class="link-secondary" href="https://cashr.netlify.app">Live Project</a>
              </div>
         </ul>
-        </section>
+        </section> -->
 
     <ul reversed class="non-blluet-lists">
         <div class="container-centre 
