--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div class="brand-nav"><h1>RUMAN ABDUL KHADER</h1>
         </div>
 
-        <div class="brand-nav">FULL STACK DEVEOPER</div>
+        <div class="brand-nav">SALES SPECIALIST/ SUPPLY
+            CHAIN ANALYST</div>
 
         <ul class="list non bullet nav pills">
 
@@ -42,7 +43,11 @@
 
         <h1 class="hero-heading">Hi, I am Ruman Ak </h1>
 
-        <p class="head-title"><strong> I'm learning how to program and make web applications with NeogCamp</strong></p>
+        <p class="head-title"><strong> I am an enthusiastic graduate in science
+            with holistic knowledge of sales,
+            business development and design. I am
+            also experienced in handling and
+            starting my own business.</strong></p>
     </header>
 
     <section class="section -ow">
@@ -73,8 +78,7 @@
         <div class="container-centre">
             <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
 
-             
-             <a class="link-third" href="/blogs.html">READ MY  BLOGS </a>
+             <a class="link-third" href="/lib/Copy of RUMAN ABDUL KHADER (3).pdf">READ MY  BLOGS </a>
         </div>
     
     </section>
