--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     
         <div class="container-centre">
 
-            <a class="link-third" href="/lib/Copy of RUMAN ABDUL KHADER (3).pdf">Click Here </a>
+            <a class="link-third" href="/lib/Copy of RUMAN ABDUL KHADER (3).pdf">Click here to view </a>
              </div> 
              <!-- <a class="link link-primary" href="https:/google.com">SECONDARY BUTTON </a> -->
     </section>
