--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="hero-heading">Hi, I am Ruman Ak </h1>
 
         <p class="head-title"><strong> I am an enthusiastic graduate in science
-            with holistic knowledge of sales with 5+ years of experience,
+            with holistic knowledge of sales and project support with 5+ years of experience,
             business development and design.</strong></p>
     </header>
 
@@ -56,20 +56,20 @@
     
         <div class="container-centre">
 
-            <a class="link-third" href="/lib/Copy of RUMAN ABDUL KHADER (3).pdf">Click here to view </a>
+            <a class="link-third" href="/lib/Ruman CV.pdf">Click here to view </a>
              </div> 
              <!-- <a class="link link-primary" href="https:/google.com">SECONDARY BUTTON </a> -->
     </section>
 
     <section class="section">
-        <h1>CURRENTLY WORKING AT OCEAN SCALE ,SAUDI ARABIA<section></section></h1>
+        <h1>CURRENTLY WORKING AT MHZ CONTRACTING CO.,SAUDI ARABIA<section></section></h1>
         <div class="container-centre">
             <!--<p>I like to showcase my work and thus, you can see my projects hosted online</p>
         -->
              <!--<a class="link link-primary 
              pro-link" href="/projects.html">SEE MY PROJECTS </a>-->
              <a class="link link-primary 
-             pro-link" href="https://www.oceanindus.com/">COMPANY WEBSITE </a>
+             pro-link" href="https://www.mhzksa.com/">COMPANY WEBSITE </a>
         </div>
     </section>
 
