--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <p class="head-title"><strong> I am an enthusiastic graduate in science
             with holistic knowledge of sales and project support with 5+ years of experience,
-            business development and design.</strong></p>
+            business development and vendor coordination.</strong></p>
     </header>
 
     <section class="section -ow">
